<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/basic_menu">
        <item
            android:id="@+id/atn_direct_discover"
            android:icon="@drawable/ic_action_discover"
            android:showAsAction="ifRoom|withText"
            android:title="@string/discover_peers_button" />
        <item
            android:id="@+id/atn_direct_enable"
            android:icon="@drawable/ic_action_on_off"
            android:showAsAction="never"
            android:title="@string/enable_p2p_button" />
    </group>

    <group android:id="@+id/help_menu">
        <item
            android:id="@+id/disconnect"
            android:icon="@drawable/ic_action_on_off"
            android:showAsAction="never"
            android:title="@string/disconnect" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_action_discover"
            android:showAsAction="never"
            android:title="@string/about" />

        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_action_on_off"
            android:showAsAction="never"
            android:title="@string/help" />
        <item
            android:id="@+id/settings"
            android:showAsAction="never"
            android:title="@string/action_settings" />
    </group>
</menu>
